fix cut off/shrunk table details icon bug

--- a/app/javascript/src/components/_info-box.scss
+++ b/app/javascript/src/components/_info-box.scss
@@ -12,6 +12,7 @@
   align-items: center;
 
   .info-box__icon {
+    flex-shrink: 0;
     margin-right: spacing();
   }
 }
